--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.0.0",
     "@mui/material": "^5.0.0",
     "@reduxjs/toolkit": "^1.6.1",
@@ -12,6 +14,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "material-ui": "^0.20.2",
     "mongoose": "^6.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
