--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,9 @@
         "mongoose": "^6.0.7",
         "multer": "^1.4.3",
         "multer-gridfs-storage": "^5.0.1",
-        "nodemon": "^2.0.13"
+        "nodemon": "^2.0.13",
+        "redux-logger": "^3.0.6",
+        "redux-saga": "^1.1.3",
+        "redux-saga-effects": "^1.1.0"
     }
 }
