--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^6.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-gif-loader": "^0.6.0",
     "react-jss": "^10.8.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
